src/test/run-pass/move-scalar.rs
fn main() {

    let y: int = 42;
    let mut x: int;
    x <- y;
    assert (x == 42);
}
